--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,5 +5,6 @@
     <li>
       <%= link_to event.name, event_path(event) %>
     </li>
+    <li><%= event.created_at.to_s %></li>
   <% end %>
 </ul>
