--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,6 @@
-<h1><%= @event.name %></h1>
 
+<h1><%= @event.name %></h1>
+<h2><%= @event.status %></h2>
+<h2><%= @event.category.try(:name) %></h2>
 
 <%= simple_format @event.description %>
