--- a/app/views/admin/user_profiles/edit.html.erb
+++ b/app/views/admin/user_profiles/edit.html.erb
@@ -8,7 +8,7 @@
 
   <div class="form-group">
     <%= f.label :birthday %>
-    <%= f.date_field :birthday, :class => "form-control" %>
+    <%= f.date_select :birthday, :class => "form-control" %>
   </div>
 
   <div class="form-group">
