--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -40,7 +40,7 @@
 
 <div class="form-group">
   <%= f.label :description %>
-  <%= f.text_area :description, :class => "form-control" %>
+  <%= f.cktext_area :description, ckeditor: { toolbar: 'mini', language: 'zh-CN'} %>
 </div>
 
 <%= f.nested_fields_for :tickets do |ff| %>
@@ -58,7 +58,6 @@
 
     <div class="form-group">
       <%= ff.label :description %>
-      <%= ff.text_area :description, :class => "form-control" %>
     </div>
   </fieldset>
   <%= ff.remove_nested_fields_link "移除这个票种", :class => "btn btn-danger" %>
