--- a/app/views/registrations/_step1_form.html.erb
+++ b/app/views/registrations/_step1_form.html.erb
@@ -1,6 +1,6 @@
 <div class="form-group">
   <%= f.label :ticket_id %>
-  <%= f.select :ticket_id, @event.tickets.map{ |t| [t.name, t.id] }, {}, :class => "form-control" %>
+  <%= f.select :ticket_id, @event.tickets.map{ |t| [t.name, t.id] }, {}, :class => "form-control", :required => true, :autofocus => true %>
 </div>
 
 <div class="form-group">
