--- a/app/views/registrations/step3.html.erb
+++ b/app/views/registrations/step3.html.erb
@@ -2,16 +2,26 @@
 
 <h2>Step 3</h2>
 
+<% if @registration.errors.any? %>
+ <ul>
+ <% @registration.errors.full_messages.each do |error| %>
+   <li><%= error %></li>
+ <% end %>
+ </ul>
+<% end %>
+
 <%= form_for @registration, :url => update_step3_event_registration_path(@event, @registration) do |f| %>
 
   <div class="form-group">
     <%= f.label :website %>
-    <%= f.url_field :website, :class => "form-control" %>
+    <%= f.url_field :website, :class => "form-control", :required => true, :autofocus => true  %>
+    <div class="help-block with-errors"></div>
   </div>
 
   <div class="form-group">
     <%= f.label :bio %>
-    <%= f.text_area :bio, :class => "form-control" %>
+    <%= f.text_area :bio, :class => "form-control", :required => true  %>
+    <div class="help-block with-errors"></div>
   </div>
 
   <div class="form-group">
@@ -20,3 +30,7 @@
   </div>
 
 <% end %>
+
+<script>
+ $("form").validator();
+</script>
