--- a/app/views/admin/event_registrations/index.html.erb
+++ b/app/views/admin/event_registrations/index.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @event.name %> / Registrations</h1>
 
+<% if false %>
 <div class="submenu">
   <div class="btn-group">
     <%= link_to "全部 (#{@event.registrations.size})", admin_event_registrations_path(registration_filters(:status =>   nil)), :class => "btn btn-success btn-group #{(params[:status].blank?) ? "active" : ""}" %>
@@ -15,6 +16,27 @@
     <% end %>
   </div>
 </div>
+<% end %>
+
+<%= form_tag admin_event_registrations_path(@event), :method => :get do %>
+  <p><%= text_field_tag :registration_id, params[:registration_id], :placeholder => "报名编号，可用,号区隔", :class => "form-control" %></p>
+
+  <p><% Registration::STATUS.each do |s| %>
+   <label><%= check_box_tag "statuses[]", s, Array(params[:statuses]).include?(s) %> <%= t(s, :scope => + "registration.status") %> (<%= @event.registrations.by_status(s).size %>)</label>
+  <% end %></p>
+
+  <p><% @event.tickets.each do |t| %>
+   <label><%= check_box_tag "ticket_ids[]", t.id, Array(params[:ticket_ids]).include?(t.id.to_s) %> <%= t.name %> (<%= + @event.registrations.where( :ticket_id => t.id ).size %>)</label>
+  <% end %></p>
+
+  <p>
+    报名日期：<%= date_field_tag :start_on, params[:start_on] %>～<%= date_field_tag :end_on, params[:end_on] %>
+  </p>
+
+  <p class="text-right">
+   <%= submit_tag "送出筛选", :class => "btn btn-primary" %>
+  </p>
+<% end %>
 
 <table class="table">
 <tr>
