--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -43,6 +43,18 @@
   <%= f.cktext_area :description, ckeditor: { toolbar: 'mini', language: 'zh-CN'} %>
 </div>
 
+<div class="form-group">
+  <%= f.label :logo %>
+  <%= f.file_field :logo, :class => "form-control" %>
+  <% if f.object.logo.present? %>
+    <label>
+      <%= f.check_box :remove_logo %>删除图档
+    </label>
+    <%= link_to f.object.logo.filename, f.object.logo.url, :target => "_blank" %>
+  <% end %>
+</div>
+
+
 <%= f.nested_fields_for :tickets do |ff| %>
   <fieldset style="border-left: 5px solid #bbb; margin-bottom: 10px; padding: 10px;">
     <legend>Ticket</legend>
