--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,9 @@
-
 <h1><%= @event.name %></h1>
+
+<% if @event.logo.present? %>
+  <%= link_to image_tag(@event.logo.url(:thumb)), @event.logo.url, :target => "_blank" %>
+<% end %>
+
 <h2><%= @event.status %></h2>
 <h2><%= display_event_status(@event) %></h2>
 <h2><%= @event.category.try(:name) %></h2>
