--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -38,7 +38,7 @@
   <%= f.select :category_id, Category.all.map{ |c| [c.name, c.id] }, {}, :class => "form-control" %>
 </div>
 
-<div class="form-group">
+<!-- <div class="form-group">
   <%= f.label :images %>
   <%= f.file_field :images, :multiple => true, :class => "form-control" %>
   <% if f.object.images.present? %>
@@ -49,8 +49,7 @@
       <%= link_to i.filename, i.url, :target => "_blank" %>
     <% end %>
   <% end %>
-</div>
-
+</div> -->
 
 <div class="form-group">
   <%= f.label :description %>
@@ -68,6 +67,28 @@
   <% end %>
 </div>
 
+<%= f.nested_fields_for :attachments do |ff| %>
+  <fieldset style="border-left: 5px solid #bbb; margin-bottom: 10px; padding: 10px;">
+    <legend>Attachment</legend>
+    <div class="form-group">
+      <%= ff.label :attachment %>
+      <%= ff.file_field :attachment, :class => "form-control" %>
+      <% if ff.object.attachment.present? %>
+        已上传档案 <%= link_to ff.object.description, ff.object.attachment.url, :target => "_blank" %>
+      <% end %>
+    </div>
+
+    <div class="form-group">
+      <%= ff.label :description %>
+      <%= ff.text_field :description, :class => "form-control" %>
+    </div>
+
+    <%= ff.remove_nested_fields_link "移除这个档案", :class => "btn btn-danger" %>
+  </fieldset>
+<% end %>
+<p class="text-right">
+  <%= f.add_nested_fields_link :attachments, "新增档案", :class => "btn btn-default" %>
+</p>
 
 <%= f.nested_fields_for :tickets do |ff| %>
   <fieldset style="border-left: 5px solid #bbb; margin-bottom: 10px; padding: 10px;">
