--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -1,14 +1,21 @@
 <h1><%= @event.name %></h1>
 
+<ul>
+<% @event.attachments.each do |a| %>
+  <li><%= link_to a.description, a.attachment.url %></li>
+  <li><%= link_to image_tag(a.attachment.url(:small)), a.attachment.url %></li>
+<% end %>
+</ul>
+
 <% if @event.logo.present? %>
   <%= link_to image_tag(@event.logo.url(:thumb)), @event.logo.url, :target => "_blank" %>
 <% end %>
 
-<% if @event.images.present? %>
+<!-- <% if @event.images.present? %>
   <% @event.images.each do |i| %>
     <%= link_to image_tag(i.url(:small)), i.url %>
   <% end %>
-<% end %>
+<% end %> -->
 
 <p>
   <%= link_to "打開前台", event_path(@event), :target => "_blank", :class => "btn btn-primary" %>
