--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,6 +5,7 @@
   <th>ID</th>
   <th>Email</th>
   <th>Groups</th>
+  <th>Role</th>
   <th>Actions</th>
   <th></th>
 </tr>
@@ -17,6 +18,7 @@
         <%= g.name %><br>
       <% end %>
     </td>
+    <td><%= t(user.role, :scope => "user.role") %></td>
     <td><%= link_to "Edit", edit_admin_user_path(user), :class => "btn btn-default" %></td>
     <td><%= link_to "Edit Profile", edit_admin_user_profile_path(user), :class => "btn btn-default" %></td>
 
